# sop_multimodal_ai

./: .gitignore  README.md  SOP multi agent system.docx  requirements.txt  start_backend.sh
backend/: main.py  pyproject.toml
backend/api/: routes.py
backend/config/: settings.py
backend/services/: activity_detection_service.py  audio_service.py  frame_service.py  job_service.py  ocr_service.py  sop_generation_service.py  timeline_service.py  transcription_service.py
backend/storage/: file_manager.py  job_store.py
data/activities/: aaf60079-e79f-482d-b9cf-d63ce4da674b.json
data/jobs/: jobs.json
data/timeline/: aaf60079-e79f-482d-b9cf-d63ce4da674b.json
